fix bug where bottom section would leave a gap

--- a/src/Pages/styles/Landing.scss
+++ b/src/Pages/styles/Landing.scss
@@ -352,12 +352,28 @@ section {
     // flex-wrap: wrap;
     .mockups {
       position: relative;
+      > * {
+        transition: 0.2s ease;
+      }
+      &:hover {
+        .iphone1 {
+          transform: rotate(20deg) translateX(2rem);
+        }
+        .iphone2 {
+          transform: rotate(-20deg) translateX(-2rem);
+        }
+      }
+    }
+
+    .iphone1 {
+      transform: rotate(15deg);
     }
 
     .iphone2 {
       position: absolute;
       top: 3rem;
       right: 10rem;
+      transform: rotate(-15deg);
     }
   }
 
